gccida/g0/scan_loop
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1135:19: error: expected identifier or '('
 struct loop_info = (  struct loop_info *)loop->aux; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1182:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
loop->scan_start = ( rtx)p[4]; 
                         ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1208:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
: ( v3 = ( rtx)pa[2]), 
               ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1209:15: error: expected ')'
(  struct set = v3) != 0LL 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1209:1: note: to match this '('
(  struct set = v3) != 0LL 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1209:21: error: expected expression
(  struct set = v3) != 0LL 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1216:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src = (  struct rtx_def *)v3[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1269:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( ( rtx)set[1] == const_int_rtx[64] && *( _WORD *)pa[1].fld[0].rtwint == 32 ) 
           ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1361:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v20 = mode_class_0[*( unsigned __int8 *)( set->fld[0].rtwint + 2)] == MODE_COMPLEX_INT 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1362:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( unsigned __int8 *)( set->fld[0].rtwint + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1426:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = mode_class_0[*( unsigned __int8 *)( set->fld[0].rtwint + 2)] == MODE_COMPLEX_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1427:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( unsigned __int8 *)( set->fld[0].rtwint + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1504:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = mode_class_0[*( unsigned __int8 *)( set->fld[0].rtwint + 2)] == MODE_COMPLEX_INT 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1505:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( unsigned __int8 *)( set->fld[0].rtwint + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1561:10: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
&& ( rtx)pa[4] == loop->top 
         ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1606:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
update_start = ( rtx)update_start[1] ) 
                     ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/loop.c:1624:23: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
update_starta = ( rtx)update_starta[1] ) 
                      ^~~~~~~~~~~~~~~~
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/scan_loop/src/obj/loop.o] Error 1
